# github-training

./: .env.template  .flake8  .gitignore  app.py  main.py  outro_arquivo.py  pyproject.toml  test.py  teste.py  ttt.txt
