[tool.poetry]
name = "github-training"
version = "0.1.0"
description = ""
authors = ["Flavio Sousa <flaviomarcioti@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
