[tool.poetry]
name = "github-training"
version = "0.1.0"
description = ""
authors = ["Flavio Sousa <flaviomarcioti@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
selenium = "^4.11.2"
streamlit = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
